--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "url": ""
   },
   "engines": {
-    "node": "0.10.35"
+    "node": "0.10.35",
+    "npm": "2.1.18"
   },
   "scripts": {
     "start": "node server.js"
