--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "npm": "2.1.18"
   },
   "scripts": {
-    "start": "node server.js"
+    "build": "NODE_ENV=production webpack -p",
+    "start": "webpack-dev-server --progress --colors --hot --content-base ./server/public --config ./webpack.config.js",
+    "test": "mocha --compilers js:babel-core/register --recursive"
   },
   "dependencies": {
     "clean-css-brunch": "latest",
@@ -27,6 +29,20 @@
     "uglify-js-brunch": "latest"
   },
   "devDependencies": {
-    "expect.js": "latest"
+    "babel": "^6.1.18",
+    "babel-core": "^6.2.1",
+    "expect": "^1.13.0",
+    "expect.js": "latest",
+    "isomorphic-fetch": "^2.2.0",
+    "jsx-loader": "^0.13.2",
+    "lodash": "^3.10.1",
+    "mocha": "^2.3.4",
+    "moment": "^2.10.6",
+    "nock": "^3.3.2",
+    "normalizr": "^1.4.0",
+    "react": "^0.14.3",
+    "react-hot-loader": "^1.3.0",
+    "react-redux": "^4.0.0",
+    "redux-thunk": "^1.0.0"
   }
 }
