--- a/package.json
+++ b/package.json
@@ -18,15 +18,7 @@
     "test": "mocha --compilers js:babel-core/register --recursive"
   },
   "dependencies": {
-    "clean-css-brunch": "latest",
-    "css-brunch": "latest",
-    "express": "^4.12.3",
-    "handlebars-brunch": "latest",
-    "javascript-brunch": "latest",
-    "less-brunch": "latest",
-    "read-components": "latest",
-    "sass-brunch": "latest",
-    "uglify-js-brunch": "latest"
+    "react": "^0.14.3"
   },
   "devDependencies": {
     "babel": "^6.1.18",
@@ -40,9 +32,10 @@
     "moment": "^2.10.6",
     "nock": "^3.3.2",
     "normalizr": "^1.4.0",
-    "react": "^0.14.3",
     "react-hot-loader": "^1.3.0",
     "react-redux": "^4.0.0",
-    "redux-thunk": "^1.0.0"
+    "redux-thunk": "^1.0.0",
+    "webpack": "^1.12.9",
+    "webpack-dev-server": "^1.14.0"
   }
 }
