--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "test": "mocha --compilers js:babel-core/register --recursive"
   },
   "dependencies": {
-    "react": "^0.14.3"
+    "react": "^0.14.3",
+    "react-addons-pure-render-mixin": "^0.14.0",
+    "react-dom": "^0.14.0"
   },
   "devDependencies": {
-    "babel": "^6.1.18",
-    "babel-core": "^6.2.1",
+    "babel-core": "^5.8.23",
+    "babel-loader": "^5.3.2",
     "expect": "^1.13.0",
     "expect.js": "latest",
     "isomorphic-fetch": "^2.2.0",
@@ -36,6 +38,11 @@
     "react-redux": "^4.0.0",
     "redux-thunk": "^1.0.0",
     "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.0"
+    "webpack-dev-server": "^1.14.0",
+    "autoprefixer-loader": "^2.1.0",
+    "css-loader": "^0.17.0",
+    "node-sass": "^3.3.3",
+    "sass-loader": "^2.0.1",
+    "style-loader": "^0.12.4"
   }
 }
