--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "test": "mocha --compilers js:babel-core/register --recursive"
   },
   "dependencies": {
+    "history": "^1.13.1",
     "react": "^0.14.3",
     "react-addons-pure-render-mixin": "^0.14.0",
-    "react-dom": "^0.14.0"
+    "react-dom": "^0.14.0",
+    "react-router": "^1.0.0"
   },
   "devDependencies": {
     "babel-core": "^5.8.23",
